// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema > should render a column with a remaining error 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a column with a remaining error 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a column with a remaining error 3`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->myColumn1Type<!---->
        <!---->
        <ul>
          <li class="svelte-6n243d">remainder1</li>
          <li class="svelte-6n243d">remainder2</li>
        </ul>
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a column with a wrong type 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a column with a wrong type 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><span class="red svelte-6n243d">type mismatch</span>
        <!----><label><input type="checkbox" />adjust</label
        ><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a column with a wrong type 3`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!----><span class="red svelte-6n243d"
          >type mismatch:</span
        >
        <!----><label><input type="checkbox" />adjust</label
        ><!---->
        <table class="comparison svelte-6n243d">
          <tbody>
            <tr>
              <td class="svelte-6n243d">required:</td>
              <td class="svelte-6n243d">myColumn1Type</td>
            </tr>
            <tr>
              <td class="svelte-6n243d">actual:</td>
              <td class="svelte-6n243d">myColumn1TypeX</td>
            </tr>
            <!---->
          </tbody>
        </table>
        <!---->
        <!----><!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a column with a wrong type 4`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">column</span> myColumn1Name
  <small>ALTER TABLE myTable1Name ALTER myColumn1Name TYPE myColumn1Type</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a connect button 1`] = `
"<!----><button>connect</button
><!---->
"
`;

exports[`Schema > should render a connect button 2`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with a remaining error 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with a remaining error 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <!---->
      <!---->
      <li class="svelte-6n243d">
        <button disabled="" class="bullet red svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">chk</span> myConstraint1Name
        <!----><!---->
        <!----><!----><!---->myConstraint1Clause<!---->
        <!---->
        <ul>
          <li class="svelte-6n243d">remainder1</li>
          <li class="svelte-6n243d">remainder2</li>
        </ul>
        <!---->
      </li>
      <!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with a wrong clause 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with a wrong clause 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <!---->
      <!---->
      <li class="svelte-6n243d">
        <button disabled="" class="bullet red svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">chk</span> myConstraint1Name
        <!----><!---->
        <!----><!----><!----><span class="red svelte-6n243d"
          >clause mismatch:</span
        >
        <!----><label><input type="checkbox" />recreate</label
        ><!---->
        <table class="comparison svelte-6n243d">
          <tbody>
            <tr>
              <td class="svelte-6n243d">required:</td>
              <td class="svelte-6n243d">myConstraint1Clause</td>
            </tr>
            <tr>
              <td class="svelte-6n243d">actual:</td>
              <td class="svelte-6n243d">myConstraint1ClauseX</td>
            </tr>
            <tr>
              <td class="svelte-6n243d">raw:</td>
              <td class="svelte-6n243d">myConstraint1ClauseX Raw</td>
            </tr>
            <!---->
          </tbody>
        </table>
        <!---->
        <!----><!---->
      </li>
      <!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with a wrong clause 3`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">constraint</span> myConstraint1Name
  <small>ALTER TABLE myTable1Name DROP CONSTRAINT myConstraint1Name</small
  ><!---->
</li>
<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">constraint</span> myConstraint1Name
  <small>ALTER TABLE myTable1Name ADD CONSTRAINT myConstraint1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a constraint with shortener 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with shortener 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a constraint with shortener 3`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->myColumn1Type<!---->
        <!----><!---->
        <ul>
          <!---->
          <li class="svelte-6n243d">
            <button disabled="" class="bullet red svelte-6n243d">.</button
            ><!---->
            <span class="nodeType svelte-6n243d">chk</span> myConstraint1Name
            <!----><!---->
            <!----><!----><!----><span class="red svelte-6n243d"
              >clause mismatch:</span
            >
            <!----><label><input type="checkbox" />recreate</label
            ><!---->
            <table class="comparison svelte-6n243d">
              <tbody>
                <tr>
                  <td class="svelte-6n243d">required:</td>
                  <td class="svelte-6n243d">(⬁) myConstraint1Clause</td>
                </tr>
                <tr>
                  <td class="svelte-6n243d">actual:</td>
                  <td class="svelte-6n243d">(⬁) myConstraint1ClauseX</td>
                </tr>
                <tr>
                  <td class="svelte-6n243d">raw:</td>
                  <td class="svelte-6n243d">(⬁) myConstraint1ClauseX Raw</td>
                </tr>
                <!---->
              </tbody>
            </table>
            <!---->
            <!----><!---->
          </li>
          <!---->
        </ul>
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a minimal sequence 1`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <li class="sequence svelte-6n243d">
    <button disabled="" class="bullet svelte-6n243d">.</button
    ><!---->
    <span class="nodeType svelte-6n243d">seq</span> myOnlyName
    <!----><!---->
    <!----><!----><!---->myType<!---->
    <!----><!----><!---->55<!---->
    <!----><!---->
  </li>
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a minimal table 1`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myOnlyName
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a minimal table 2`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myOnlyName
    <!----><!---->
    <!----><!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a minimal table 3`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myOnlyNameReloaded
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing column 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing column 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><span class="red svelte-6n243d">missing</span>
        <label><input type="checkbox" />add</label>
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing column 3`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><span class="red svelte-6n243d">missing</span>
        <label><input type="checkbox" />add</label>
        <!----><!---->
        <!----><!----><!---->myColumn1Type<!---->
        <!----><!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing column 4`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">column</span> myColumn1Name
  <small>ALTER TABLE myTable1Name ADD COLUMN myColumn1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a missing constraint 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing constraint 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <!---->
      <!---->
      <li class="svelte-6n243d">
        <button disabled="" class="bullet red svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">chk</span> myConstraint1Name
        <!----><span class="red svelte-6n243d">missing</span>
        <label><input type="checkbox" />add</label>
        <!----><!---->
        <!----><!----><!---->myConstraint1Clause<!---->
        <!----><!---->
      </li>
      <!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing constraint 3`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">constraint</span> myConstraint1Name
  <small>ALTER TABLE myTable1Name ADD CONSTRAINT myConstraint1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a missing sequence 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <li class="sequence svelte-6n243d">
    <button disabled="" class="bullet red svelte-6n243d">.</button
    ><!---->
    <span class="nodeType svelte-6n243d">seq</span> myOnlyName
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!----><!----><!---->myType<!---->
    <!----><!----><!---->55<!---->
    <!----><!---->
  </li>
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing sequence 2`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">sequence</span> myOnlyName
  <small>CREATE SEQUENCE myOnlyName</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a missing table 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing table 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!----><!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a missing table 3`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">table</span> myTable1Name
  <small>CREATE TABLE myTable1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a missing table and patch fails 1`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">table</span> myTable1Name
  <span class="red svelte-6n243d"
    >alterSchema?subject=table&amp;name=myTable1Name&amp;method=add: response
    code 400 myError</span
  ><!---->
</li>
"
`;

exports[`Schema > should render a normal table with constraints 1`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a normal table with constraints 2`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!---->
      <li class="svelte-6n243d">
        <button disabled="" class="bullet svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">pk</span> myTable1Constraint1Name
        <!----><!---->
        <!----><!---->
        <!----><!---->
      </li>
      <li class="svelte-6n243d">
        <button disabled="" class="bullet svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">pk</span> ~constraintTildeNameTable
        <!----><!---->
        <!----><!---->
        <!----><!---->
      </li>
      <!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a normal table with constraints 3`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->myColumn1Type<!---->
        <!----><!---->
        <ul>
          <!---->
          <li class="svelte-6n243d">
            <button disabled="" class="bullet svelte-6n243d">.</button
            ><!---->
            <span class="nodeType svelte-6n243d">pk</span>
            myColumn1Constraint1Name
            <!----><!---->
            <!----><!---->
            <!----><!---->
          </li>
          <li class="svelte-6n243d">
            <button disabled="" class="bullet svelte-6n243d">.</button
            ><!---->
            <span class="nodeType svelte-6n243d">chk</span>
            myColumn1Constraint2Name
            <!----><!---->
            <!----><!----><!---->myColumn1Constraint2Clause<!---->
            <!----><!---->
          </li>
          <li class="svelte-6n243d">
            <button disabled="" class="bullet svelte-6n243d">.</button
            ><!---->
            <span class="nodeType svelte-6n243d">pk</span>
            ~ConstraintTildeNameColumn
            <!----><!---->
            <!----><!---->
            <!----><!---->
          </li>
          <li class="svelte-6n243d">
            <button disabled="" class="bullet svelte-6n243d">.</button
            ><!---->
            <span class="nodeType svelte-6n243d">chk</span>
            myColumn1ConstraintArrowName
            <!----><!---->
            <!----><!----><!---->myColumn1ConstraintArrowClause hsqldb:⬁ mysql:⬁<!---->
            <!----><!---->
          </li>
          <!---->
        </ul>
        <!---->
      </li>
      <!---->
      <!---->
      <li class="svelte-6n243d">
        <button disabled="" class="bullet svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">pk</span> myTable1Constraint1Name
        <!----><!---->
        <!----><!---->
        <!----><!---->
      </li>
      <li class="svelte-6n243d">
        <button disabled="" class="bullet svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">pk</span> ~constraintTildeNameTable
        <!----><!---->
        <!----><!---->
        <!----><!---->
      </li>
      <!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a normal table without constraints 1`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a normal table without constraints 2`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a normal table without constraints 3`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><!---->
        <!----><!----><!---->myColumn1Type<!---->
        <!----><!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a sequence with a remaining error 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <li class="sequence svelte-6n243d">
    <button disabled="" class="bullet red svelte-6n243d">.</button
    ><!---->
    <span class="nodeType svelte-6n243d">seq</span> myOnlyName
    <!----><!---->
    <!----><!----><!---->myType<!---->
    <!----><!----><!---->55<!---->
    <!---->
    <ul>
      <li class="svelte-6n243d">remainder1</li>
      <li class="svelte-6n243d">remainder2</li>
    </ul>
    <!---->
  </li>
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a sequence with wrong start 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <li class="sequence svelte-6n243d">
    <button disabled="" class="bullet red svelte-6n243d">.</button
    ><!---->
    <span class="nodeType svelte-6n243d">seq</span> myOnlyName
    <!----><!---->
    <!----><!----><!---->myType<!---->
    <!----><!----><!----><span class="red svelte-6n243d">start mismatch:</span>
    <!----><!---->
    <table class="comparison svelte-6n243d">
      <tbody>
        <tr>
          <td class="svelte-6n243d">required:</td>
          <td class="svelte-6n243d">55</td>
        </tr>
        <tr>
          <td class="svelte-6n243d">actual:</td>
          <td class="svelte-6n243d">66</td>
        </tr>
        <!---->
      </tbody>
    </table>
    <!---->
    <!----><!---->
  </li>
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a sequence with wrong type 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <li class="sequence svelte-6n243d">
    <button disabled="" class="bullet red svelte-6n243d">.</button
    ><!---->
    <span class="nodeType svelte-6n243d">seq</span> myOnlyName
    <!----><!---->
    <!----><!----><!----><span class="red svelte-6n243d">type mismatch:</span>
    <!----><!---->
    <table class="comparison svelte-6n243d">
      <tbody>
        <tr>
          <td class="svelte-6n243d">required:</td>
          <td class="svelte-6n243d">myType</td>
        </tr>
        <tr>
          <td class="svelte-6n243d">actual:</td>
          <td class="svelte-6n243d">myTypeX</td>
        </tr>
        <!---->
      </tbody>
    </table>
    <!---->
    <!----><!----><!---->55<!---->
    <!----><!---->
  </li>
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a table with a remaining error 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a table with a remaining error 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <ul>
      <li class="svelte-6n243d">remainder1</li>
      <li class="svelte-6n243d">remainder2</li>
    </ul>
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused NOT NULL column 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused NOT NULL column 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><span class="red svelte-6n243d">unused</span>
        <label><input type="checkbox" />drop</label>
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused NOT NULL column 3`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet red svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><span class="red svelte-6n243d">unused</span>
        <label><input type="checkbox" />drop</label>
        <!----><!---->
        <!----><!----><!---->myColumn1Type not null<!---->
        <!----><!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused column 1`] = `
"<!----><button disabled="" class="bullet yellow svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused column 2`] = `
"<!----><button disabled="" class="bullet yellow svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet yellow svelte-6n243d">+</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><span class="yellow svelte-6n243d">unused</span>
        <label><input type="checkbox" />drop</label>
        <!----><!---->
        <!----><!----><!---->
        <!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused column 3`] = `
"<!----><button disabled="" class="bullet yellow svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <li class="column svelte-6n243d">
        <button class="bullet yellow svelte-6n243d">-</button
        ><!---->
        <span class="nodeType svelte-6n243d">col</span> myColumn1Name
        <!----><span class="yellow svelte-6n243d">unused</span>
        <label><input type="checkbox" />drop</label>
        <!----><!---->
        <!----><!----><!---->myColumn1Type<!---->
        <!----><!---->
        <!---->
      </li>
      <!---->
      <!----><!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused column 4`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">column</span> myColumn1Name
  <small>ALTER TABLE myTable1Name DROP COLUMN myColumn1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a unused constraint 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused constraint 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><!---->
    <!----><!---->
    <ul>
      <!---->
      <!---->
      <li class="svelte-6n243d">
        <button disabled="" class="bullet red svelte-6n243d">.</button
        ><!---->
        <span class="nodeType svelte-6n243d">chk</span> myConstraint1Name
        <!----><span class="red svelte-6n243d">unused</span>
        <label><input type="checkbox" />drop</label>
        <!----><!---->
        <!----><!----><!---->myConstraint1Clause<!---->
        <!----><!---->
      </li>
      <!---->
    </ul>
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused constraint 3`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">constraint</span> myConstraint1Name
  <small>ALTER TABLE myTable1Name DROP CONSTRAINT myConstraint1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a unused sequence 1`] = `
"<!----><button disabled="" class="bullet yellow svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <li class="sequence svelte-6n243d">
    <button disabled="" class="bullet yellow svelte-6n243d">.</button
    ><!---->
    <span class="nodeType svelte-6n243d">seq</span> myOnlyName
    <!----><span class="yellow svelte-6n243d">unused</span>
    <label><input type="checkbox" />drop</label>
    <!----><!---->
    <!----><!----><!---->myType<!---->
    <!----><!----><!---->55<!---->
    <!----><!---->
  </li>
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused sequence 2`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">sequence</span> myOnlyName
  <small>DROP SEQUENCE myOnlyName</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a unused table 1`] = `
"<!----><button disabled="" class="bullet yellow svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><span class="yellow svelte-6n243d">unused</span>
    <label><input type="checkbox" />drop</label>
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused table 2`] = `
"<!----><button disabled="" class="bullet yellow svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">-</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myTable1Name
    <!----><span class="yellow svelte-6n243d">unused</span>
    <label><input type="checkbox" />drop</label>
    <!----><!---->
    <!----><!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused table 3`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">table</span> myTable1Name
  <small>DROP TABLE myTable1Name</small
  ><!---->
</li>
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 1`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myUnusedTableName
    <!----><span class="yellow svelte-6n243d">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select>
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
        <option value="myMissingTableName2">myMissingTableName2</option>
        <!---->
      </select></label
    ><!----><!---->
    <!---->
    <!---->
  </li>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myMissingTableName
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!---->
    <!---->
  </li>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myMissingTableName2
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 2`] = `
"<!----><button disabled="" class="bullet red svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <li class="table svelte-6n243d">
    <button class="bullet yellow svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myUnusedTableName
    <!----><span class="yellow svelte-6n243d">unused</span>
    <label><input type="checkbox" />drop</label>
    <label
      ><select>
        <option value="<NONE>">rename to ...</option>
        <option value="myMissingTableName">myMissingTableName</option>
        <option value="myMissingTableName2">myMissingTableName2</option>
        <!---->
      </select></label
    ><!----><!---->
    <!---->
    <!---->
  </li>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myMissingTableName
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!---->
    <!---->
  </li>
  <li class="table svelte-6n243d">
    <button class="bullet red svelte-6n243d">+</button
    ><!---->
    <span class="nodeType svelte-6n243d">tab</span> myMissingTableName2
    <!----><span class="red svelte-6n243d">missing</span>
    <label><input type="checkbox" />create</label>
    <!----><!---->
    <!---->
    <!---->
  </li>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render a unused table to be renamed to a missing 3`] = `
"<li class="svelte-6n243d">
  <span class="nodeType svelte-6n243d">table</span> myUnusedTableName
  <small>ALTER TABLE "myUnusedTableName" RENAME TO "myMissingTableName"</small
  ><!---->
</li>
"
`;

exports[`Schema > should render an empty schema 1`] = `
"<!----><button disabled="" class="bullet svelte-6n243d">.</button
><!---->
Schema <button class="reload svelte-dizlwz">🗘</button
><!---->
<ul>
  <!---->
  <!---->
</ul>
<!---->
"
`;

exports[`Schema > should render an error message 1`] = `
"<!---->schema: response code 400 myError<!---->
"
`;
